--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="GT | Data Scientist" />
   <meta property="og:description" content="Data Scientist" />
-  <meta property="og:url" content="https://g-g-thorat.github.io/" />
+  <meta property="og:url" content="https://G-G-thorat.github.io/" />
   <meta property="og:site_name" content="GT | Data Scientist" />
-  <meta property="article:publisher" content="https://g-g-thorat.github.io/" />
-  <meta property="og:image" content="https://g-g-thorat.github.io" />
+  <meta property="article:publisher" content="https://G-G-thorat.github.io/" />
+  <meta property="og:image" content="https://G-G-thorat.github.io" />
   
   <!-- Twitter -->
   <!--
@@ -273,19 +273,21 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
+          I am a Data Science Grad Student at University of Texas at Arlington. Always strive to bring 100% to the work I do.
+		  
+		  Highly accomplished IT Engineer professional with 5 years of experience in Data science, Data analysis, Data visualization, Machine learning, and NLP. Expert at leading complex multistage projects.
 
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
+          I have worked on technologies like Python, Django, Flask, MySQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's.
 
-          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
+          Strong analytical and problem-solving skills utilizing logical and systematic approach. Ability to work as a team member or individually.
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
-            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
-            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
+            <li><b>Languages:</b> Python, Java, JavaScript, R, OpenCV, H20.ai, Hadoop, Django, Angular.Js, SQL, C, C++, HTML/CSS, Spark, PHP</li>
+            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB, MsSql Server, Oracle</li>
+            <li><b>Libraries:</b> NumPy, Pandas, OpenCV, SKLearn, ETL</li>
+            <li><b>Frameworks:</b> Flask, Django, Tableau, Keras, TensorFlow, PyTorch, Bootstrap, AWS, GCP, Git, Docker, MS Azure, Power BI</li>
+            <li><b>Applications:</b> Machine Learning, Data Preparation, Agile methodologies, Data Structures and Analysis, Data Visualization, Business analysis, Exploratory Data Analysis, ETL, Data modelling and wrangling, Web Scraping, TensorFlow, Predictive Modelling, Quantitative Analysis, SQL/NoSQL, Data Flow Diagrams (DFD), Deep Learning, AWS Cloud Infrastructure, Data and Cloud Security, SWOT analysis, Pattern Recognition, Statistical Analysis, Quality Management, MS-Office Suite.</li>
           </ul>
           
         </p>
@@ -295,7 +297,7 @@
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
+          Looking for an opportunity to work in a challenging position combining my skills in Machine Learning and Data Science, which provides professional development, interesting experiences and personal growth.
         </p>
         <!-- <p>
           Another Paragraph
@@ -884,7 +886,7 @@ of each drug container to estimate the degradation of the drug.
         </div>
 
         <!-- certifications -->
-        <!-- <div class="card">
+        <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Certificates</h4>
             <div class="row text-left">
@@ -915,7 +917,7 @@ of each drug container to estimate the degradation of the drug.
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
       </div>
     </section>
@@ -930,22 +932,28 @@ of each drug container to estimate the degradation of the drug.
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.uta.edu/" target="_blank" class="teal-text hoverline">University of Texas at Arlington</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Arlington, TX, USA</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>Master of Science in Data Science      
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>CGPA: </b>3.4/4.0
                 </p>
 
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
+                    <li>Advanced DBMS</li>
                     <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Data Science</li>
+					<li>Machine Learning</li>
+                    <li>Big Data Analysis</li>
+					<li>Foundations of Computing</li>
+                    <li>Probability and Statistics</li>
+					<li>Advanced Engineering Economy</li>
+                    <li>Data Mining</li>  
                   </ul>
                   </p>
 
@@ -959,14 +967,14 @@ of each drug container to estimate the degradation of the drug.
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">
-				  School of Engineering and Applied Science, Ahmedabad University</a></span>
+                  <span class="card-title"><a href="https://mu.ac.in/" target="_blank" class="teal-text hoverline">
+				  Shivajirao S Jondhale College of Engineering, Dombivli, Mumbai University</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Mumbai, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Engineering in Computer Engineering
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>CGPA: </b>4.0/4.0
                 </p>
 
                 <ul>
