--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Data Science Grad Student at University of Texas at Arlington. Always strive to bring 100% to the work I do.
+          I am a Data Science Masters Student at University of Texas at Arlington. Always strive to bring 100% to the work I do.
 		  
 		  Highly accomplished IT Engineer professional with 5 years of experience in Data science, Data analysis, Data visualization, Machine learning, and NLP. Expert at leading complex multistage projects.
 
-          I have worked on technologies like Python, Django, Flask, MySQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's.
+          I have worked on technologies like Python, JavaScript, Flask, MySQL, Hadoop, HTML5/CSS, Tableau/Power BI, C++ during my bachelor's.
 
           Strong analytical and problem-solving skills utilizing logical and systematic approach. Ability to work as a team member or individually.
         </p>
@@ -324,35 +324,33 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                <a href="http://www.zenithinfotech.com.sg/" target="_blank"><img alt="Zenith logo"
+                    src="/assets/img/zenith.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                  <span class="card-title"><a href="http://www.zenithinfotech.com.sg/" target="_blank"
+                      class="teal-text hoverline">Zenith InfoTech Ltd</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">Data Engineer</div>
             <ul>
               <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
+                Incorporated cloud architecture into new facility planning, reducing need for on-site equipment and technical support personnel.
               </li>
               <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
-              </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
+                Eliminated downtime and maximized revenue by providing top project quality control.</li>
+              <li>Ensure that all cloud solutions follow architecture, security, compliance controls, and conformance to the company's standards.</li>
+              <li>Formulate and define technical scope and objectives for cloud services management, non-functional requirements, disaster recovery, and security.</li>
               <li>
-                <b>Tools:</b> Python, Flask, MongoDB
+                <b>Tools:</b> Python, SQL, Hadoop Scala, AWS Services.
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span>Nov 2020 - Nov 2021 | Mumbai, India</span>
           </div>
         </div>
 
@@ -361,40 +359,37 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.intertrustgroup.com/" target="_blank"><img alt="InterTrust logo"
+                    src="/assets/img/intertrust.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                  <span class="card-title"><a href="https://www.intertrustgroup.com/" target="_blank"
+                      class="teal-text hoverline">InterTrust Group Ltd</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Jr. Data Scientist</div>
             <ul>
               <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
+                Provided real-time business analytics and visualizations for internal customers.
               </li>
               <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a multi-robot and multi-system
-environment
+                Used Python, SQL, and Excel to build a product recommendation engine, increasing average time on page, improving companies’ revenue.
               </li>
               <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a multi-camera environment;
-utilized perspective transformation, object detection, and object tracking to find the location of a human.
+                Increased the speed of the framework by 20% by using a customized YOLOv4 algorithm to perform object detection and
+                DeepSORT algorithm for multi-object tracking.
               </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
+              <li>Automated models and metrics for better product performance and provided analytical insights to maximize the impact and reach of company’s resources.</li>
               <li>
-                <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
+                <b>Tools:</b> Python, OpenCV, Keras, Tensorflow, PyTorch
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>Aug 2019 - July 2020 | Mumbai, India</span>
           </div>
         </div>
 
@@ -403,34 +398,38 @@ utilized perspective transformation, object detection, and object tracking to fi
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <img alt="Mtag logo" src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" />
+                <img alt="CT logo" src="/assets/img/codalyze.avif" class="responsive-img center-block" />
 
               </div>
 
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Mtag
-                      Innovations</a></span>
+                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Codalyze
+				  Technologies</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
+            <div class="role brown-text text-darken-2">ML Engineer</div>
             <ul>
               <li>
-                Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
-of each drug container to estimate the degradation of the drug.
+                Interpreted 300+ complex simulation datasets using statistical methods.
+				Developed dimensional data modeling to satisfy OLAP needs.
+               </li>
+              <li>
+                Improved accuracy of simulation by 30% using complex algorithms.
+				Used SQL to re-structure schemas with 100+ tables to enhance data integrity.
               </li>
               <li>
-                Created an alert system to send notifications and emails when the parameters exceed the threshold.
+                <b>Tools:</b> Python, JavaScript, R Studio 
               </li>
-              <li>
-                <b>Tools:</b> Python, Flask, JavaScript
+			  <li>
+                <b>Frameworks:</b> Pandas, SKLearn, Keras, TensorFlow 
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
+            <span>Feb 2018 - May 2019 | Mumbai, India</span>
           </div>
         </div>
 
@@ -439,36 +438,34 @@ of each drug container to estimate the degradation of the drug.
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.cignex.com" target="_blank"><img alt="Cignex logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
+                <img alt="Aerus logo"
+                    src="/assets/img/aerus.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
+                  <span class="card-title"><a href="https://www.webculturetechnologies.in/" target="_blank"
+                      class="teal-text hoverline">Aerus InfoTech </a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
+            <div class="role brown-text text-darken-2">Full Stack Developer</div>
             <ul>
               <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
+                Supervise the creation and maintenance of new products, technical documentation, and workflows.
+				Collaborate with the app development team, including the project manager, developers, and quality assurance specialists, to identify problems, testing methods, and best practices.
+				Completed all phases of planning, developing, and debugging web applications and software accurately.
               </li>
               <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
+                Create and deliver highly efficient application-based solutions to optimize the company’s complaints handling process.
+				Ensure that applications are secure and that they can interact with multiple APIs and databases.
               </li>
               <li>
-                <b>Tools:</b> Python, Scikit-learn, NLTK
+                <b>Tools:</b> HTML/CSS, Bootstrap, MySQL, Django, Angular.Js
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
+            <span>Nov 2016 - Dec 2017 | Thane, India</span>
           </div>
         </div>
 
@@ -797,10 +794,13 @@ of each drug container to estimate the degradation of the drug.
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="/assets/img/r.png" class="responsive-img" />R
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="/assets/img/js.png" class="responsive-img" />JavaScript
+              </div>
+			  <div class="col s4 m2">
+                <img alt="" src="/assets/img/htmlcss.png" class="responsive-img" />HTML/CSS
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
@@ -809,7 +809,7 @@ of each drug container to estimate the degradation of the drug.
                 <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                <img alt="" src="/assets/img/oracle.jpg" class="responsive-img" />Oracle
               </div>
             </div>
           </div>
@@ -834,6 +834,9 @@ of each drug container to estimate the degradation of the drug.
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
               </div>
+			  <div class="col s4 m2">
+                <img alt="" src="/assets/img/etl.png" class="responsive-img" />ETL
+              </div>
             </div>
           </div>
         </div>
@@ -844,10 +847,13 @@ of each drug container to estimate the degradation of the drug.
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
+                <img alt="" src="/assets/img/tableau.png" class="responsive-img" />Tableau
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
+                <img alt="" src="/assets/img/power bi.jpg" class="responsive-img" />Power BI
+              </div>
+			  <div class="col s4 m2">
+                <img alt="" src="/assets/img/hadoop.jpg" class="responsive-img" />Hadoop
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
@@ -868,7 +874,7 @@ of each drug container to estimate the degradation of the drug.
         <!-- Other -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Other</h4>
+            <h4 class="brown-text light">Applications</h4>
             <div class="row text-center">
 
 
@@ -879,7 +885,13 @@ of each drug container to estimate the degradation of the drug.
                 <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
+                <img alt="" src="/assets/img/azure.jpg" class="responsive-img" />Azure
+              </div>
+			  <div class="col s4 m2">
+                <img alt="" src="/assets/img/gcp.png" class="responsive-img" />GCP
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/docker.png" class="responsive-img" />Docker
               </div>
             </div>
           </div>
@@ -895,21 +907,40 @@ of each drug container to estimate the degradation of the drug.
                   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
+                        <img src="/assets/img/ibm.jpg">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Machine Learning (Stanford)</span>
+                        <span class="card-title teal-text">Certified Data Scientist (IBM)</span>
                       </div>
                     </div>
                   </div>
-
+				  <div class="col s12 m6 l6">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/jh.png">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title teal-text">Certified Data Science Professional (John Hopkins University)</span>
+                      </div>
+                    </div>
+                  </div>
+				  <div class="col s12 m6 l6">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/google.png">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title teal-text">Certified Data Analyst (Google)</span>
+                      </div>
+                    </div>
+                  </div>
                   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
+                        <img src="/assets/img/aws.png">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Algorithms (Stanford)</span>
+                        <span class="card-title teal-text">Certified Cloud Practitioner (AWS)</span>
                       </div>
                     </div>
                   </div>
