--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open GT's Resume in a new tab"
-          href="https://drive.google.com/file/d/1to1HmegxJ3qqMdMftR4GAcBuSAPVfhfV/view?usp=share_link" target="_blank"
+          href="https://drive.google.com/file/d/1dfQwwifIhwbvZrIuJgxiGVrVF2CyHwCj/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
