--- a/index.html
+++ b/index.html
@@ -42,34 +42,6 @@
   <meta property="article:publisher" content="https://G-G-thorat.github.io/" />
   <meta property="og:image" content="https://G-G-thorat.github.io" />
   
-  <!-- Twitter -->
-  <!--
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
-  <meta name="author" content="GT Bhogayata" />
-  <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/android-icon-192x192.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png" />
-  <link rel="manifest" href="/assets/img/favicon/manifest.json" />
-  <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" />
-  <meta name="theme-color" content="#ffffff" />
-  <meta name="robots" content="index, follow" />
-  -->
   
   <!-- Google Site Verification for indexing -->
   <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
@@ -966,6 +938,50 @@
               class="fa fa-linkedin"></i><a aria-label="GT on LinkedIn" href="http://linkedin.com/in/gaurav-thorat-16b20a112/"
               class="hoverline" target="_blank">linkedin.com/in/gaurav-thorat-16b20a112/</a></a>
         </p>
+      </div>
+    </section>
+
+ <!-- Ninth Section: Blogs -->
+    <section id="blogs" class="section scrollspy">
+      <h3 class="page-title white-text teal">Blogs</h3>
+      <div class="container">
+        <div class="row">
+
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="titanic disaster" src="/assets/img/titanic.jpg" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Titanic Disaster Survival Prediction System<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Machine Learning from Disaster
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Information</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>About:</b> Titanic sank on April 14–15, 1912</li>
+                  <li><b>Challenge:</b> The objective of this competition is to learn from a given trained data set to predict who would survive or perish in the Titanic disaster</li>
+				  <li><b>Submission:</b> Original score was 77%</li>
+				  <li><b>Contribution:</b> My improved score is 78%</li>
+
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit the page for blog" href="https://google.com"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="mdi-av-my-library-books small"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+        </div>
       </div>
     </section>
   </main>
