--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <img alt="CT logo" src="/assets/img/codalyze.avif" class="responsive-img center-block" />
+                <img alt="CT logo" src="/assets/img/codalyze.jpg" class="responsive-img center-block" />
 
               </div>
 
@@ -942,7 +942,7 @@
     </section>
 
  <!-- Ninth Section: Blogs -->
-    <section id="blogs" class="section scrollspy">
+    <section id="blog" class="section scrollspy">
       <h3 class="page-title white-text teal">Blogs</h3>
       <div class="container">
         <div class="row">
