--- a/blog_1.html
+++ b/blog_1.html
@@ -55,7 +55,7 @@
   
   <!-- Main Content-->
   <main>
-	<section id="blogs" class="section scrollspy">
+	<section id="blog" class="section scrollspy">
       <h3 class="page-title white-text teal">Titanic Disaster Survival Prediction System</h3>
       <div class="container flow-text">
         <!-- <blockquote>
