--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the page for blog" href="https://github.com/G-G-Thorat/G-G-Thorat.github.io/blob/main/blog_1.html"
+                  <a aria-label="Visit the page for blog" href="blog_1.html"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="mdi-av-my-library-books small"></i></a>
