--- a/blog_1.html
+++ b/blog_1.html
@@ -84,15 +84,14 @@
 		the test dataset (test.csv) and gender submission outputs (gender_submission.csv). 
 		The earlier one is used to train our Machine Learning model, and the latter one is used to test it.
 		</p>
-		<img style="height: 100%; width: 100%; object-fit: contain" src="/assets/img/datasets.png" alt="Dataset">
-		<br>
+		<img alt="dataset" src="/assets/img/datasets.png" class="responsive-img center-block" />
 		<b>head() :</b>
 		<p>
 		train_data.head()
-		<img alt="Dataset" src="/assets/img/train.png" class="responsive-img center-block" />
+		<img alt="train" src="/assets/img/train.png" class="responsive-img center-block" />
 		<br>
 		test_data.head()
-		<img alt="Dataset" src="/assets/img/test.png" class="responsive-img center-block" />
+		<img alt="test" src="/assets/img/test.png" class="responsive-img center-block" />
 		</p>
         <br>
         <!-- <p>
