--- a/blog_1.html
+++ b/blog_1.html
@@ -55,7 +55,7 @@
   
   <!-- Main Content-->
   <main>
-	<section id="blog" class="section scrollspy">
+	<section id="blogs" class="section scrollspy">
       <h3 class="page-title white-text teal">Titanic Disaster Survival Prediction System</h3>
       <div class="container flow-text">
         <!-- <blockquote>
@@ -63,7 +63,9 @@
             A Software Developer with a passion for Backend Development and Artificial Intelligence.
 
           </h2>
-        </blockquote> -->        
+        </blockquote> -->  
+		<img alt="titanic disaster" src="/assets/img/titanic.jpg" class="responsive-img center-block" />
+		<br>
         <h4><b>About The Disaster - </b></h4>
 		<p>
           The sinking of the Titanic is one of the most infamous shipwrecks in history.
@@ -92,7 +94,15 @@
 		<br>
 		test_data.head()
 		<img alt="test" src="/assets/img/test.png" class="responsive-img center-block" />
+		<br>
+		gender.head()
+		<img alt="dataset" src="/assets/img/gs.png" class="responsive-img center-block" />
 		</p>
+		<p>
+		<b>Survivals :</b>
+		To get an estimate of what percentage of men and women have survived, we can make use of the “Survived” attribute and calculate the respective survived percentages as shown in the below code snippet.
+		</p>
+		<img alt="dataset" src="/assets/img/survivals.png" class="responsive-img center-block" />
         <br>
         <!-- <p>
           
