--- a/blog_1.html
+++ b/blog_1.html
@@ -96,14 +96,22 @@
 		<img alt="test" src="/assets/img/test.png" class="responsive-img center-block" />
 		<br>
 		gender.head()
-		<img alt="dataset" src="/assets/img/gs.png" class="responsive-img center-block" />
+		<img alt="gender" src="/assets/img/gs.png" class="responsive-img center-block" />
 		</p>
 		<p>
 		<b>Survivals :</b>
 		To get an estimate of what percentage of men and women have survived, we can make use of the “Survived” attribute and calculate the respective survived percentages as shown in the below code snippet.
 		</p>
-		<img alt="dataset" src="/assets/img/survivals.png" class="responsive-img center-block" />
-        <br>
+		<img alt="survivals" src="/assets/img/survivals.png" class="responsive-img center-block" />
+        <p><b>Initial Score :</b>
+		After the initial submission followed by <a href="https://www.kaggle.com/code/alexisbcook/titanic-tutorial/notebook">Kaggle</a> titanic tutorial,
+		<img alt="submission" src="/assets/img/initial.jpg" class="responsive-img center-block" />
+		<br>
+		the initial score was 77.5 %
+		<img alt="score" src="/assets/img/score.png" class="responsive-img center-block" />
+		</p>
+		<br>
+		<h4><b>Contribution - </b></h4>
         <!-- <p>
           
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
