--- a/blog_1.html
+++ b/blog_1.html
@@ -152,10 +152,14 @@
 		<h4><b>References - </b></h4>
 		<p>
 		1. <a href="https://medium.com/@praveen.orvakanti/this-will-help-you-score-95-percentile-in-the-kaggle-titanic-ml-competition-aa2b3fd1b79b">Higher Percentage upto 90%</a>
-		2. <br><a href="https://www.britannica.com/topic/Titanic">Titanic Disaster Prediction</a>
-		3. <br><a href="https://www.educative.io/courses/predictive-data-analysis-with-python">Predictive Analysis</a>
-		4. <br><a href="https://www.geeksforgeeks.org/python-introduction-matplotlib/">Graph Plots</a>
-		5. <br><a href=" https://jalammar.github.io/visual-interactive-guide-basics-neural-networks/">Canvas info</a>
+		<br>
+		2. <a href="https://www.britannica.com/topic/Titanic">Titanic Disaster Prediction</a>
+		<br>
+		3. <a href="https://www.educative.io/courses/predictive-data-analysis-with-python">Predictive Analysis</a>
+		<br>
+		4. <a href="https://www.geeksforgeeks.org/python-introduction-matplotlib/">Graph Plots</a>
+		<br>
+		5. <a href=" https://jalammar.github.io/visual-interactive-guide-basics-neural-networks/">Canvas info</a>
 		</p>
       </div>
     </section>
