--- a/blog_1.html
+++ b/blog_1.html
@@ -57,6 +57,9 @@
   <main>
 	<section id="blogs" class="section scrollspy">
       <h3 class="page-title white-text teal">Titanic Disaster Survival Prediction System</h3>
+	<form action = "https://g-g-thorat.github.io/">
+		<button class="icon-btn" type="submit"><i class="fa fa-home"></i> Home</button>
+		</form>
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
