--- a/blog_1.html
+++ b/blog_1.html
@@ -60,6 +60,9 @@
 	<form action = "https://g-g-thorat.github.io/">
 		<button class="btn" type="submit"><i class="fa fa-home"></i> Home</button>
 		</form>
+	<form action = "https://github.com/G-G-Thorat/Titanic_Blog">
+		<button class="btn" type="submit"><i class="fa fa-github"></i> Code</button>
+		</form>
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
