--- a/blog_1.html
+++ b/blog_1.html
@@ -60,7 +60,7 @@
 	<form action = "https://g-g-thorat.github.io/">
 		<button class="btn" type="submit"><i class="fa fa-home"></i> Home</button>
 		</form>
-	<form action = "https://github.com/G-G-Thorat/Titanic_Blog">
+	<form action = "https://github.com/G-G-Thorat/Titanic_Blog/blob/main/getting-started-with-titanic-gt.ipynb">
 		<button class="btn" type="submit"><i class="fa fa-github"></i> Code</button>
 		</form>
       <div class="container flow-text">
