--- a/index.html
+++ b/index.html
@@ -981,6 +981,40 @@
             </div>
           </div>
           
+		<div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="image classifier" src="/assets/img/cover.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Facial Emotion Expressions<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Image Classifier using CNN for facial emotion expressions dataset
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Information</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>About:</b> An image classification task for facial expressions using CNN to gain maximum accuracy</li>
+                  <li><b>Challenge:</b> The objective of this assignment is to learn from a given data set to train the model and make it predictable to classify the images as per there emotional bases.</li>
+				  <li><b>Basic:</b> Code was executing and working accuracy of 80% with overfitting</li>
+				  <li><b>Contribution:</b> Enhanced the accuracy to 90% and above with reducing training dataset and adding regularization.</li>
+
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit the page for blog" href="assn_1.html"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="mdi-av-my-library-books small"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+		
         </div>
       </div>
     </section>
