--- a/assn_1.html
+++ b/assn_1.html
@@ -78,7 +78,7 @@
 		</p>
 		<br>
 		<p>
-		<b>Preface :<b>
+		<b>Preface :</b>
 		As mentioned in reference [5], computer vision is a rapidly growing field within the information technology sector that focuses on teaching machines how to interpret images and videos. This technology is essential for the development of various applications such as robotics, self-driving vehicles, and facial recognition systems. At the core of computer vision lies image recognition, which involves identifying the category to which an image belongs. 
 		<br>
 		With that in mind, let's explore some related terminologies in greater detail.
