--- a/assn_1.html
+++ b/assn_1.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Gaurav Thorat | Titanic Blog</title>
+  <title>Gaurav Thorat | Image Classifier Blog</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -103,6 +103,7 @@
 		
 		<p>
 		<b>What does Convolutional Neural Network (CNN) means ?</b>
+		<br>
 		Convolutional neural networks (CNN) are a type of artificial neural network (ANN) used most frequently in deep learning to interpret visual data as stated in [8].
 		<img alt="dataset" src="/assets/img/face.jpg" class="responsive-img center-block" />
 		<br>
@@ -130,10 +131,19 @@
 		<br>
 		For developing image classification models, we are also goint to use Tensorflow.
 		</p>
-		<br>
+		
 		<p>
 		<b>TensorFlow :</b>
 		<br>
-		<img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" width="50" height="50">
+		<img alt="TensorFlow" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" width="100" height="100" href="https://www.tensorflow.org/">
 		<br>
+		Using TensorFlow, it is possible to extract image data from various files, resize images, and convert multiple pictures at once [2].
+		<br>
+		Importing all libraries: [1]
+		<br>
+		<img alt="dataset" src="/assets/img/tf.png" class="responsive-img center-block" />
+		</p>
+		
+		
+		
 		
