--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the page for blog" href="assn_1.html"
+                  <a aria-label="Visit the page for blog" href="https://medium.com/@gauravthorat1998/facial-emotion-expressions-aab729bf69c0"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="mdi-av-my-library-books small"></i></a>
