--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,40 @@
             </div>
           </div>
 		
+		<div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="text classifier" src="/assets/img/coverr.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Rotten Tomatoes Reviews<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Text classifier using Naive Bayes Classifier build from scratch
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Information</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>About:</b> A text classification task for rotten tomatoes reviews as fresh and rotten using NBC to gain maximum accuracy</li>
+                  <li><b>Challenge:</b> The objective of this assignment is to learn from a given data set to train the model and make it predictable to classify the texts as per there Freshnesses.</li>
+				  <li><b>Basic:</b> Implementing a Naive Bayes Classifier from Scratch and working on it to perform classification on given dataset</li>
+				  <li><b>Contribution:</b> Enhanced the accuracy to 85% and above with hyperparameter tuning and additive smoothing.</li>
+
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit the page for blog" href="https://medium.com/@gauravthorat1998/text-classification-using-naive-bayes-classifier-nbc-from-scratch-e4b6c1cb6f4c"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="mdi-av-my-library-books small"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+		
         </div>
       </div>
     </section>
