--- a/index.html
+++ b/index.html
@@ -1049,6 +1049,40 @@
             </div>
           </div>
 		
+		<div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="img classifier" src="/assets/img/final_proj.jpg" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Leaf Disease Classification<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Image classifier using CNN, SVM, Decision Trees, Naive Bayes Classifier, Random Forest Classifier and kNN used to classify the dataset and compared accordingly.
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Information</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>About:</b> A image classification task for leaf diseases as Healthy and Diseased and which disease has occurred using NBC, kNN, SVM, CNN and others to gain maximum accuracy amongst them.</li>
+                  <li><b>Challenge:</b> The objective of this assignment is to learn from a given data set to train the model and make it predictable to classify the images as per there disease category.</li>
+				  <li><b>Basic:</b> Implementing a Classification task from beginning and working on it to perform classification on given dataset</li>
+				  <li><b>Contribution:</b> Enhanced the accuracy to 93% on CNN, comapring it various other classifiers with hyperparameter tuning.</li>
+
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit the page for blog" href="https://medium.com/@gauravthorat1998/text-classification-using-naive-bayes-classifier-nbc-from-scratch-e4b6c1cb6f4c"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="mdi-av-my-library-books small"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+		
         </div>
       </div>
     </section>
