--- a/index.html
+++ b/index.html
@@ -296,6 +296,46 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
+                <a href="http://www.uta.edu/" target="_blank"><img alt="UTA logo"
+                    src="/assets/img/uta.jpg" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="http://www.uta.edu" target="_blank"
+                      class="teal-text hoverline">University of Texas at Arlington</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Research Assistant</div>
+            <ul>
+              <li>
+                Worked with the research team to design and develop software applications and tools for a smart watch
+tailored to specific research needs.</li>
+              <li>
+                Wrote clean and efficient code, adhering to best practices and coding standards and implemented and
+maintained databases to store and retrieve required data.</li>
+              <li>Conducted advanced statistical analyses, such as regression analysis, machine learning, and predictive
+modeling, to support research objectives.</li>
+              <li>Conducted thorough data analysis using statistical software (e.g., Python, R) to extract meaningful
+insights and identify trends to develop data visualization dashboards and reports to communicate research
+findings effectively.</li>
+		    <li>Maintained detailed records of research procedures, data collection, analysis methodologies and results.</li>
+              <li>
+                <b>Tools:</b> Python, SQL, Java, Azure Services, MS Office.
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>Sept 2022 - Aug 2023 | Arlington, Texas</span>
+          </div>
+        </div>
+
+        
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
                 <a href="http://www.zenithinfotech.com.sg/" target="_blank"><img alt="Zenith logo"
                     src="/assets/img/zenith.jpg" class="responsive-img center-block" /></a>
               </div>
@@ -307,61 +347,30 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Data Engineer</div>
+            <div class="role brown-text text-darken-2">Data Scientist</div>
             <ul>
               <li>
-                Incorporated cloud architecture into new facility planning, reducing need for on-site equipment and technical support personnel.
+                Incorporated cloud architecture into new facility planning, reducing need for on-site equipment and
+technical support personnel.
               </li>
               <li>
-                Eliminated downtime and maximized revenue by providing top project quality control.</li>
-              <li>Ensure that all cloud solutions follow architecture, security, compliance controls, and conformance to the company's standards.</li>
-              <li>Formulate and define technical scope and objectives for cloud services management, non-functional requirements, disaster recovery, and security.</li>
-              <li>
-                <b>Tools:</b> Python, SQL, Hadoop Scala, AWS Services.
-              </li>
-            </ul>
-          </div>
-          <div class="card-action">
-            <span>Nov 2020 - Nov 2021 | Mumbai, India</span>
-          </div>
-        </div>
-
-        
-        <div class="card">
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12 m2">
-                <a href="https://www.intertrustgroup.com/" target="_blank"><img alt="InterTrust logo"
-                    src="/assets/img/intertrust.jpg" class="responsive-img center-block" /></a>
-              </div>
-              <!-- <div class="col s12 m10"> -->
-              <div class="col s12 m10">
-                <p>
-                  <span class="card-title"><a href="https://www.intertrustgroup.com/" target="_blank"
-                      class="teal-text hoverline">InterTrust Group Ltd</a></span>
-                </p>
-              </div>
-            </div>
-            <div class="role brown-text text-darken-2">Jr. Data Scientist</div>
-            <ul>
-              <li>
-                Provided real-time business analytics and visualizations for internal customers.
+                Eliminated downtime and maximized revenue by providing top project quality control
               </li>
               <li>
-                Used Python, SQL, and Excel to build a product recommendation engine, increasing average time on page, improving companies’ revenue.
+                Ensure that all cloud solutions follow architecture, security, compliance controls, and conformance to
+the company's standards.
               </li>
-              <li>
-                Increased the speed of the framework by 20% by using a customized YOLOv4 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.
-              </li>
-              <li>Automated models and metrics for better product performance and provided analytical insights to maximize the impact and reach of company’s resources.</li>
+              <li>Formulate and define technical scope and objectives for cloud services management, non-functional
+requirements, disaster recovery, and security.</li>
+		<li>Used Python, SQL, and Excel to build a product recommendation engine, increasing average time on
+page, improving companies’ revenue.</li>    
               <li>
                 <b>Tools:</b> Python, OpenCV, Keras, Tensorflow, PyTorch
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Aug 2019 - July 2020 | Mumbai, India</span>
+            <span>Aug 2019 - Nov 2021 | Mumbai, India</span>
           </div>
         </div>
 
@@ -370,27 +379,27 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <img alt="CT logo" src="/assets/img/codalyze.jpg" class="responsive-img center-block" />
+                <a href="https://www.intertrustgroup.com/" target="_blank"><img alt="InterTrust logo"
+                    src="/assets/img/intertrust.jpg" class="responsive-img center-block" /></a>
 
               </div>
 
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Codalyze
-				  Technologies</a></span>
+                  <span class="card-title"><a href="https://www.intertrustgroup.com/" target="_blank"
+                      class="teal-text hoverline">InterTrust Group Ltd</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">ML Engineer</div>
+            <div class="role brown-text text-darken-2">Software Engineer</div>
             <ul>
               <li>
-                Interpreted 300+ complex simulation datasets using statistical methods.
-				Developed dimensional data modeling to satisfy OLAP needs.
+                Provided real-time business analytics and visualizations for internal customers.
+				Developed, implemented, and validated new predictive modelling algorithms and applications.
                </li>
               <li>
-                Improved accuracy of simulation by 30% using complex algorithms.
-				Used SQL to re-structure schemas with 100+ tables to enhance data integrity.
+                Automated models and metrics for better product performance and provided analytical insights to maximize the impact and reach of company’s resources
               </li>
               <li>
                 <b>Tools:</b> Python, JavaScript, R Studio 
