--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="http://www.uta.edu/" target="_blank"><img alt="UTA logo"
-                    src="/assets/img/uta.jpg" class="responsive-img center-block" /></a>
+                    src="/assets/img/uta.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
