--- a/index.html
+++ b/index.html
@@ -928,10 +928,10 @@ page, improving companies’ revenue.</li>
               aria-label="Call GT">+16825630193</a></a>
         </p>
         <p>
-          <a aria-label="Email GT" href="mailto:gxt6403@mavs.uta.edu" target="_blank" data-position="top"
+          <a aria-label="Email GT" href="mailto:gauravthorat1998a@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email GT" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email GT" href="mailto:gxt6403@mavs.uta.edu"
-              class="hoverline">gxt6403@mavs.uta.edu</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email GT" href="mailto:gauravthorat1998a@gmail.com"
+              class="hoverline">gauravthorat1998a@gmail.com</a></a>
         </p>
         <p>
           <a aria-label="View GT on GitHub" href="http://github.com/G-G-thorat" target="_blank"
