--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open GT's Resume in a new tab"
-          href="https://drive.google.com/file/d/1-hlutMnALSnwH6sKyx8GDVr3kXZR8ZY-/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1dS-BbsSEPHktpSaDxlCX0H7np4laP8bR/view?usp=drive_link" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -859,7 +859,7 @@ page, improving companies’ revenue.</li>
                 <p>
                   <b>Degree: </b>Master of Science in Data Science      
                   <br>
-                  <b>CGPA: </b>3.4/4.0
+                  <b>CGPA: </b>3.2/4.0
                 </p>
 
                 <ul>
@@ -875,6 +875,7 @@ page, improving companies’ revenue.</li>
                     <li>Probability and Statistics</li>
 					<li>Advanced Engineering Economy</li>
                     <li>Data Mining</li>  
+			  <li>Applied Linear Regression</li>
                   </ul>
                   </p>
 
@@ -895,7 +896,7 @@ page, improving companies’ revenue.</li>
                 <p>
                   <b>Degree: </b>Bachelor of Engineering in Computer Engineering
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>CGPA: </b>3.7/4.0
                 </p>
 
                 <ul>
