--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open GT's Resume in a new tab"
-          href="https://drive.google.com/file/d/1dS-BbsSEPHktpSaDxlCX0H7np4laP8bR/view?usp=drive_link" target="_blank"
+          href="https://drive.google.com/file/d/1iQVCI_xEgSvLjW2qnOshPJ0r9dBbCkp7/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
